<resources>
    <string name="app_name">Just Check Out</string>
    <string name="find_your_style">Find your style</string>
    <string name="all">Home</string>
    <string name="men">Home</string>
    <string name="women">My Cart</string>
    <string name="share_app">Share</string>
    <string name="winter">Logout</string>
    <string name="tops">Tops</string>
    <string name="tees">T-Shirts</string>
    <string name="hoodies">Hoodies</string>
    <string name="category">126+ Categories</string>
    <string name="next">Next</string>
    <string name="white_crop_top">White Crop Top</string>
    <string name="faded_tear_jeans">Faded tear jeans</string>
    <string name="crop_top_price">50.9</string>
    <string name="faded_tear_jeans_price">45.5</string>
    <string name="crop_top_rating">4.8</string>
    <string name="crop_top_review">(2.6k+ reviews)</string>
    <string name="select_size">Select Size</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_xl">XL</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="size_xxl">XXL</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="size">Size:</string>
    <string name="quantity">1</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_price">96.4</string>
    <string name="taxes">Taxes</string>
    <string name="taxes_price">12.5</string>
    <string name="after_tax">Price After tax</string>
    <string name="after_tax_price">108.93</string>
    <string name="shipping">Shipping Price</string>
    <string name="shipping_price">20.0</string>
    <string name="total_price">Total Amount to pay</string>
    <string name="total_amount">128.93</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="address">1811– 435 Wilson Ave</string>
    <string name="city">Kitchener,ON (Canada)</string>
    <string name="payment_methods">Payment Method</string>
    <string name="master_card">Master card</string>
    <string name="master_card_no">**** **** **** 0123</string>
    <string name="my_cart">My cart</string>
    <string name="place_order">Place Order</string>
    <string name="pin_text">This will make you product appear in top pick item in main screen</string>
    <string name="name">Product Name</string>
    <string name="user_name">Name</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="description">Product description</string>
    <string name="weight">Product Weight</string>
    <string name="material">Product Material</string>
    <string name="Size">Product Size</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="all_products">All Products</string>
    <string name="most_popular">Most Popular</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="weight_measure">
        <item>grams</item>
        <item>lbs</item>
        <item>kgs</item>
    </string-array>
    <string-array name="category">
        <item>Women</item>
        <item>Men</item>
        <item>Child</item>
    </string-array>
    <string-array name="provinces">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Northwest Territories</item>
        <item>Nova Scotia</item>
        <item>Nunavut</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>