<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">
    <FrameLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="left|center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_backward"
            android:contentDescription="TODO" />
        <ImageView
            android:layout_gravity="right|center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bag"
            android:contentDescription="TODO" />
    </FrameLayout>
    <ImageView
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/crop_top"
        android:adjustViewBounds="true"
        android:contentDescription="TODO" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/white_crop_top"/>
            <ImageView
                android:layout_weight="1"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/wishlist_icon"
                android:contentDescription="TODO" />
        </LinearLayout>
    <FrameLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="left|center"
            android:drawablePadding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:drawableTint="@color/orange"
            android:drawableLeft="@drawable/dollar"
            android:text="@string/crop_top_price"/>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="right|center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star"
                android:contentDescription="TODO" />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_top_rating"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_top_review"/>
        </LinearLayout>
    </FrameLayout>
        <TextView
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_size"
            android:textColor="@color/black"/>
        <RadioGroup
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/size_s"/>
            <RadioButton
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/size_m"/>
            <RadioButton
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:checked="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/size_l"/>
            <RadioButton
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/size_xl"/>
            <RadioButton
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/radio_button_text_color"
                android:text="@string/size_xxl"/>
        </RadioGroup>
        <Button
            android:layout_marginTop="40dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:background="@drawable/radio_selected"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>