<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="25dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.CartActivity">
    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cart_back_button"
            android:layout_gravity="left|center"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_backward"
            android:contentDescription="TODO" />
    </FrameLayout>
    <ScrollView
        android:layout_marginBottom="250dp"
        android:layout_marginTop="35dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="400dp">
            <androidx.recyclerview.widget.RecyclerView
                android:overScrollMode="never"
                android:scrollbars="none"
                android:id="@+id/recyclerViewCartItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/cartCalculation"
        android:visibility="gone"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/price_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"/>
                <TextView
                    android:id="@+id/subTotal"
                    android:layout_marginLeft="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/orange"
                    android:drawableLeft="@drawable/dollar"
                    android:text="@string/subtotal_price"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taxes"/>
                <TextView
                    android:id="@+id/taxes"
                    android:layout_marginLeft="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/orange"
                    android:drawableLeft="@drawable/dollar"
                    android:text="@string/taxes_price"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/after_tax"/>
                <TextView
                    android:id="@+id/priceWithTaxes"
                    android:layout_marginLeft="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/orange"
                    android:drawableLeft="@drawable/dollar"
                    android:text="@string/after_tax_price"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping"/>
                <TextView
                    android:id="@+id/shippingCharges"
                    android:layout_marginLeft="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/orange"
                    android:drawableLeft="@drawable/dollar"
                    android:text="@string/shipping_price"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"/>
                <TextView
                    android:id="@+id/totalAmountToPay"
                    android:layout_marginLeft="5dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/orange"
                    android:drawableLeft="@drawable/dollar"
                    android:text="@string/total_amount"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_checkout"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:background="@drawable/radio_selected"
            android:textColor="@color/white"/>
    </LinearLayout>
    <ImageView
        android:visibility="gone"
        android:id="@+id/cartEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/cart_empty"/>
</FrameLayout>