<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutScreenFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/radio_regular"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_location"/>
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textStyle="bold"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/btn_addressClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/radio_regular"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_card"/>
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/master_card"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/master_card_no"
                    android:textStyle="bold"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/card_screen_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_cart"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/cart_screen_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="200dp"
                android:layout_height="200dp">
                <ImageView
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:cropToPadding="true"
                    android:src="@drawable/crop_top"
                    android:clipToOutline="true"
                    android:adjustViewBounds="true"/>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp">
                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/white_crop_top"/>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size_m"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="200dp"
                android:layout_height="200dp">
                <ImageView
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:cropToPadding="true"
                    android:src="@drawable/ic_jeans"
                    android:clipToOutline="true"
                    android:adjustViewBounds="true"/>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="200dp">
                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/faded_tear_jeans"/>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size_m"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/orange"
                android:drawableLeft="@drawable/dollar"
                android:text="@string/total_amount"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:background="@drawable/radio_selected"
            android:textColor="@color/white"/>
    </LinearLayout>


</FrameLayout>